Chore: improved css style

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -711,6 +711,12 @@ footer span {
   transition: all 0.5s ease-in;
 }
 
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
 /**
  * ----------------------------------------
  * animation fade-in
